# rust-gfx-hal

./: Cargo.toml  README.md  frag.spv  vert.spv
assets/shaders/: shader.fs  shader.vs
src/: main.rs
